--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ url: "http://gaohaoyang.github.io" # the base hostname & protocol for your site
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username: gaohaoyang126
-facebook_username: gaohaoyang.water
-github_username:  Gaohaoyang
-email: gaohaoyang126@126.com
-weibo_username: 3115521wh
-zhihu_username: gaohaoyang
-linkedIn_username: gaohaoyang
+twitter_username: null
+facebook_username: null
+github_username:  null
+email: null
+weibo_username: null
+zhihu_username: 死鱼死鱼
+linkedIn_username: null
 dribbble_username:
 
 description_footer: 本站记录我前端之旅的沿途风景！
@@ -36,7 +36,8 @@ disqus_shortname: gaohaoyang
 # hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
 # xxxxx字符串
 baidu_tongji_id: cf8506e0ef223e57ff6239944e5d46a4
-google_analytics_id: UA-72449510-4 # google 分析追踪id
+google_analytics_id: UA-72449510-4 
+# google 分析追踪id
 
 # Build settings
 markdown: kramdown
