--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ linkedIn_username: null
 dribbble_username:
 
 description_footer: 本站记录我前端之旅的沿途风景！
-
+port: 5001
 # comments
 # two ways to comment, only choose one, and use your own short name
 # 两种评论插件，选一个就好了，使用自己的 short_name
